add option to save to file (for remotes)

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ twophase/
 # generated .csv files
 *.csv
 
+# generated graph image
+output.png
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
